@@ -19,6 +19,8 @@
 //Note 2: All rates are in percents, 100 would mean 100%, 200
 //   would mean 200%, etc
 //Note 3: Value is not limited to 60K (see below)
+//Note 4: Use bitmask values to specify who is affected 
+//        (1: Pc, 2: Mob, 4: Pet, 8: Homonculus)
 // Other Information:
 // All options are limited to a max of 60K (aprox) which is 600%
 // or 60secs as appropiate.
@@ -26,6 +28,19 @@
 // Unless otherwise specified, the minimum value is 0 for all
 // features.
 //--------------------------------------------------------------
+
+// Homunculus setting [Note 4]
+// (placed here since homuncs are more or less like pet mobs)
+// Activates various homunc-related 'quirks' that makes them behave unlike
+//  normal characters.
+// 0x001: They can't be targetted by support skills (except for their master)
+// 0x002: They are inmune to land skills.
+// 0x004: Mobs will always go after them instead of players until attacked.
+// 0x008: They copy their master's speed on spawn/map-change
+// 0x010: They display luk/3+1 instead of their actual critical in the
+//        stat window (by default they don't crit)
+// 0x020: Their Min-Matk is always the same as their max
+hom_setting: 0xFFFF
 
 // Rate for catching pets (Note 2)
 pet_catch_rate: 100
